--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://bootswatch.com/4/lux/bootstrap.min.css">
-    <title>Node.js passport app</title>
+    <title>My fucking game web</title>
 </head>
 <body>
 
-    <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top" style="padding: 10px 20px; font-size: 14px;">
+    <!--<nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top" style="padding: 10px 20px; font-size: 14px;">
         <ul class="navbar-nav">
             <li class="nav-item">
                 <a class="nav-link" href="/">Home</a>
@@ -24,12 +24,15 @@
                 <a class="nav-link" href="/users/register">Register</a>
             </li>
         </ul>
-    </nav>
+    </nav>-->
+    <%- body %>
+    <%- include('../partials/header.ejs') %>
+    <%- include('../partials/errorMessage.ejs') %>
 
     <div class="container">
-        <%- body %>
+     
     </div>
-
+    
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
